the image stretches correctly to fit the screen

--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -1,4 +1,5 @@
 .landing-image {
   background-image: url(welcome-page.png);
+  background-size: cover;
   height: 100vh;
 }
